--- a/CSS/aboutStyle.css
+++ b/CSS/aboutStyle.css
@@ -18,52 +18,6 @@ a {
     text-decoration: none;
 }
 
-/* Header */
-.school {
-    padding: 0 2rem;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-}
-
-.head {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 1rem;
-}
-
-.logo img {
-    height: 50px;
-}
-
-.schoolName {
-    font-size: 1rem;
-}
-
-.navBar {
-    padding: 2rem;
-}
-
-.navBar ul {
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-    gap: 2rem;
-    font-size: 1.5rem;
-}
-
-.navBar ul li a {
-    color: black;
-    transition: all 0.2s ease-in;
-}
-
-.navBar ul li a:hover {
-    color: orange;
-    padding: 0.2rem;
-    border-bottom: 1px solid orange;
-}
-
 /* Photo */
 .photo {
     text-align: center;
@@ -91,6 +45,7 @@ a {
 
 .aboutSchool p {
     font-size: 1.3rem;
+    padding: 0 20%;
 }
 
 .card {
@@ -100,6 +55,7 @@ a {
     align-items: center;
     justify-content: center;
     gap: 25px;
+    padding: 0 3%;
 }
 
 .box {
@@ -144,11 +100,39 @@ a {
     margin-bottom: 1.5rem;
 }
 .boxVision p{
-    font-size: 1.5rem;
-    line-height: 2rem;
+    font-size: 1.3rem;
+    line-height: 1.5rem;
 }
 .boxVision ul li{
     list-style:disc;
     font-size: 1.3rem;
     line-height: 2rem;
+}
+.founder{
+    margin: 5rem 20%;    
+}
+.container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 1rem;
+    padding: 2% 2%;
+    background: white;
+    border-radius: 10px;
+    box-shadow: 0px 0px 20px #3333;
+    
+}
+.founder .container .founderReview h2{
+    color: #2E3298;
+    margin-bottom: 0.3rem;
+}
+.founder .container .founderReview h3{
+    text-align: center;
+    color: orange;
+    margin-bottom: 1rem;
+}
+.founder .container .founderImg img{
+    width: 350px;
+    height: 350px;
+    border-radius: 10px;
 }
