--- a/CSS/homestyle.css
+++ b/CSS/homestyle.css
@@ -12,16 +12,20 @@ body {
 
 /* Style navigation bar links */
 header {
-    background-color: #007BFF;
+    background-color: #2880dd;
     color: #FFFFFF;
-    padding: 10px 0;
+    padding: 20px 0;
+    font-size: 30px;
+    /* overflow: auto; */
 }
 
 nav ul {
     list-style: none;
     display: flex;
-    justify-content: center;
+    justify-content: right;
     gap: 20px;
+    margin-right: 30px;
+    
 }
 
 nav a {
@@ -49,18 +53,249 @@ footer {
     padding: 10px 0;
 }
 #main{
-    height: 2000px;
+    height: 3000px;
     width: 100%;
 }
 #header{
-    margin-top: 200px;
+    margin-top: 0px;
+    height: 100px;
+    width: 100%;
 }
-/* Add styles for the footer */
+
+/* Style for the entire footer */
 footer {
     background-color: #007BFF;
     color: #FFFFFF;
+    padding: 20px 0; /* Set the position to fixed */
+    bottom: 0; /* Position it at the bottom of the viewport */
+    width: 100%;
     text-align: center;
-    padding: 10px 0;
-    height: 150px; /* Set the height to 150 pixels */
-    width: 100%;   /* Set the width to 100% */
+}
+
+/* Styles for the copyright text */
+.copyright {
+    margin-top: 10px; /* Add some space between the content above and the copyright text */
+}
+
+#logo-container {
+    float: left;
+    margin-right: 20px;
+    margin-left: 50px;
+    margin-bottom:100px;
+    margin-top: 0px; /* Add margin for spacing between the logo and links */
+}
+* {box-sizing:border-box}
+
+/* Slideshow container */
+.slideshow-container {
+  max-width: 500px;
+  position: relative;
+  margin: auto;
+}
+
+/* Hide the images by default */
+.mySlides {
+  display: none;
+}
+
+/* Next & previous buttons */
+.prev, .next {
+  cursor: pointer;
+  position: relative;
+  top: 50%;
+  width: auto;
+  margin-top: -22px;
+  padding: 16px;
+  color: #000000;
+  font-weight: bold;
+  font-size: 18px;
+  transition: 1s ease;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+
+}
+.prev{
+    margin-right: 400px;
+    margin-left: 0px;
+}
+
+/* Position the "next button" to the right */
+.next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+
+/* On hover, add a black background color with a little bit see-through */
+.prev:hover, .next:hover {
+  background-color: rgba(0,0,0,0.8);
+}
+
+/* Caption text */
+.text {
+  color: #f2f2f2;
+  font-size: 15px;
+  padding: 8px 12px;
+  position: absolute;
+  bottom: 8px;
+  width: 100%;
+  text-align: center;
+}
+
+/* Number text (1/3 etc) */
+.numbertext {
+  color: #f2f2f2;
+  font-size: 12px;
+  padding: 8px 12px;
+  position: absolute;
+  top: 0;
+}
+
+/* The dots/bullets/indicators */
+.dot {
+  cursor: pointer;
+  height: 15px;
+  width: 15px;
+  margin: 0 2px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.1s ease;
+}
+
+.active, .dot:hover {
+  background-color: #717171;
+}
+
+/* Fading animation */
+.fade {
+  animation-name: fade;
+  animation-duration: 7s;
+}
+
+@keyframes fade {
+  from {opacity: 0.5}
+  to {opacity: 1}
+}
+
+/* Add a black background color to the top navigation */
+.topnav {
+    background-color: hsl(212, 84%, 52%);
+    height: 100px; /* Set the height to 100 pixels */
+    display: flex; /* Use flexbox for layout */
+    align-items: center; /* Center vertically */
+    justify-content: space-between; /* Space elements evenly */
+    padding: 0 1px; /* Add padding for spacing */
+  }
+  
+  /* Style the links inside the navigation bar */
+  .topnav a {
+    color: #f2f2f2;
+    text-align: center;
+    text-decoration: none;
+    font-size: 17px;
+    margin-right: 15px; /* Add margin for spacing between links */
+  }
+  
+  /* Change the color of links on hover */
+  .topnav a:hover {
+    background-color: #ddd;
+    color: black;
+  }
+  
+  /* Add a color to the active/current link */
+  .topnav a.active {
+    background-color: #04AA6D;
+    color: white;
+  }
+  
+  /* Style the logo */
+  .logo {
+    height: 80px; /* Set the height of the logo */
+    width: 80px;
+    margin-left: 20px; /* Allow the width to adjust proportionally */
+  }
+  .card {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    max-width: 400px;
+    margin: auto;
+    text-align: center;
+  }
+  
+  .title {
+    color: grey;
+    font-size: 18px;
+  }
+  
+  button {
+    border: none;
+    outline: 0;
+    display: inline-block;
+    padding: 8px;
+    color: white;
+    background-color: #000;
+    text-align: center;
+    cursor: pointer;
+    width: 100%;
+    font-size: 18px;
+  }
+  
+  a {
+    text-decoration: none;
+    font-size: 22px;
+    color: black;
+  }
+  
+  button:hover, a:hover {
+    opacity: 0.7;
+  }
+  .event-container {
+    width: 100%;
+    height: 400px;
+    background-color: #f2f2f2; /* Background color of the container */
+    text-align: center; /* Center align the content */
+    padding: 10px; /* Add some padding for spacing */
+    box-sizing: border-box; /* Include padding in the height and width */
+}
+
+h1 {
+    font-size: 24px; /* Adjust the heading font size as needed */
+}
+
+.photo-list {
+    list-style: none;
+    padding: 0;
+}
+
+.photo-list li {
+    display: inline-block;
+    margin-right: 10px; /* Add margin between photos */
+}
+
+.photo-list img {
+    max-height: 300px; /* Adjust the maximum height of photos as needed */
+    max-width: 500px; /* Ensure photos don't exceed the container width */
+    float: right;
+}
+body {
+  margin: 0;
+  padding: 0;
+}
+
+.container {
+  display: flex;
+  width: 100%;
+}
+
+.column {
+  flex: 1;
+  padding: 20px;
+  background-color: #f2f2f2;
+  border: 1px solid #ddd;
+  box-sizing: border-box;
+}
+
+p {
+  font-size: 16px;
+  line-height: 1.5;
+  margin: 0;
 }
