--- a/CSS/homestyle.css
+++ b/CSS/homestyle.css
@@ -289,3 +289,73 @@ font-size: 16px;
 line-height: 1.5;
 margin: 0;
 }
+.container1 {
+  display: flex;
+  width: 100%;
+}
+
+.column {
+  flex: 1;
+  padding: 20px;
+}
+
+.column h2 {
+  font-size: 24px;
+  margin-bottom: 10px;
+}
+
+.column p {
+  font-size: 16px;
+}
+
+/* Style for the Contact Us column */
+.contact-column {
+  background-color:#2880dd;
+}
+
+/* Style for the Locate Us column */
+.locate-column {
+  background-color:#2880dd;
+}
+/* styles.css */
+.contact-form {
+  max-width: 400px;
+  margin: 0 auto;
+  background-color: #fff;
+  padding: 20px;
+  border-radius: 5px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.contact-form h2 {
+  font-size: 24px;
+  margin-bottom: 20px;
+}
+
+.form-group {
+  margin-bottom: 15px;
+}
+
+.form-group label {
+  display: block;
+  margin-bottom: 5px;
+}
+
+.form-group input {
+  width: 100%;
+  padding: 10px;
+  border: 1px solid #f1f1f1;
+  border-radius: 3px;
+  font-size: 16px;
+}
+
+.form-group input[type="submit"] {
+  background-color: #007BFF;
+  color: #fff;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.form-group input[type="submit"]:hover {
+  background-color: #0056b3;
+}
