--- a/CSS/galleryStyle.css
+++ b/CSS/galleryStyle.css
@@ -18,10 +18,10 @@ a {
     text-decoration: none;
 }
 
-  header {
+  /* header {
     border-bottom: 1px solid #ccc;
     margin-bottom: 20px;
-  }
+  } */
 
   main {
     max-width: 1200px;
