--- a/CSS/contactStyle.css
+++ b/CSS/contactStyle.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&family=Roboto:wght@400;700&display=swap');
 
-* {
+*{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -17,8 +17,7 @@ li {
 a {
     text-decoration: none;
 }
-
-.container {
+/* .container {
     display: flex;
     flex-direction: column;
     min-height: 100vh;
@@ -93,4 +92,81 @@ button {
 
 button:hover {
     background-color: #0056b3;
+} */
+.topContainer{
+    height: 100%;
+    background: rgb(221, 221, 197);
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+    padding: 2.5rem 2rem;
+}
+
+.leftContainer{
+    width: 100%;
+    padding: 10px;
+    text-align: center;
+}
+.leftContainer h3{
+    font-size: 2rem;
+    border-bottom: 5px solid orange;
+    width: 50%;
+    margin-bottom: 30px;
+}
+.leftContainer .content p{
+    margin-top: 1rem;
+    font-size: 1.8rem;
+    color: gray;
+}
+.contactForm{
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    flex-direction: column;
+    padding: 1.5rem;
+    background: white;
+    border-radius: 10px;
+    border: 2px solid orange;
+    margin-left: 5%;
+    box-shadow: 0px 0px 20px #3333;
+}
+.contactForm h3{
+    font-size: 2.1rem;
+    text-align: center;
+    margin-bottom: 1rem;
+}
+input[type="text"],
+input[type="email"],
+input[type="number"],
+textarea{
+    width: 100%;
+    padding: 15px;
+    margin-bottom: 20px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+}
+.submit{
+    background-color: #007BFF;
+    color: #fff;
+    font-size: 1.2rem;
+    border: none;
+    padding: 12px 25px;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: all 0.3s ease;
+}
+.submit:hover{
+    background-color: #0056b3;
+}
+
+@media screen and (max-width: 780px){
+    .topContainer{
+        flex-wrap: wrap;
+        gap: 20px;
+    }
+    .contactForm{
+        justify-content: center;
+        margin-right: 5%;
+    }
+    
 }
