--- a/CSS/headStyle.css
+++ b/CSS/headStyle.css
@@ -1,44 +1,219 @@
 .school {
-    padding: 0 2rem;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+  padding: 0 2rem;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  /* background: red; */
 }
 
 .head {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 1rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 1rem;
 }
 
 .logo img {
-    height: 50px;
+  height: 50px;
 }
 
 .schoolName {
-    font-size: 1rem;
+  font-size: 1rem;
 }
 
 .navBar {
-    padding: 2rem;
+  padding: 2rem;
 }
 
 .navBar ul {
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-    gap: 2rem;
-    font-size: 1.5rem;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  gap: 2rem;
+  font-size: 1.5rem;
 }
 
 .navBar ul li a {
-    color: black;
-    transition: all 0.2s ease-in;
+  color: black;
+  transition: all 0.2s ease-in;
 }
 
 .navBar ul li a:hover {
-    color: orange;
-    padding: 0.2rem;
-    border-bottom: 1px solid orange;
+  color: orange;
+  padding: 0.2rem;
+  border-bottom: 1px solid orange;
 }
+
+.menu-icon {
+  display: none;
+  /* Hide the menu icon by default */
+  font-size: 24px;
+  cursor: pointer;
+  padding: 10px;
+}
+
+
+
+/* Style the dropdown links */
+.dropdown-menu a {
+  padding: 10px;
+  text-align: right;
+}
+
+@media screen and (max-width: 780px) {
+  .school {
+    /* padding: 0; */
+    flex-direction: column;
+    margin-top: 10px;
+  }
+
+  .navBar ul {
+    gap: 1rem;
+    font-size: 1.2rem;
+  }
+}
+
+@media screen and (max-width: 450px) {
+  .dropdown-menu {
+    display: none;
+    flex-direction: column;
+    background-color: #3c3fa8;
+    position: absolute;
+    top: 100px;
+    right: 0;
+  }
+
+  .school {
+    align-items: flex-start;
+  }
+
+  .schoolName h1 {
+    font-size: 1.5rem;
+  }
+
+  .menu-icon {
+    display: block;
+    /* Show the menu icon for mobile */
+  }
+
+  .navBar {
+    display: none;
+    /* Hide the regular menu for mobile */
+    width: 250px;
+  }
+
+  .navBar.active {
+    display: flex;
+    /* Show the regular menu when active */
+  }
+
+  .nav-bar li a {
+    margin: 10px 0;
+  }
+
+  .dropdown-menu {
+    display: none;
+    /* Hide the dropdown menu initially */
+  }
+
+  .dropdown-menu.active {
+    display: flex;
+    /* Show the dropdown menu when active */
+    width: 100%;
+    padding: 10px;
+  }
+}
+
+/* *{
+    padding: 0;
+    margin: 0;
+    text-decoration: none;
+    list-style: none;
+    box-sizing: border-box;
+  }
+  body{
+    font-family: montserrat;
+  }
+  nav{
+    background: #0082e6;
+    height: 80px;
+    width: 100%;
+  }
+  label.logo{
+    color: white;
+    font-size: 35px;
+    line-height: 80px;
+    padding: 0 100px;
+    font-weight: bold;
+  }
+  nav ul{
+    float: right;
+    margin-right: 20px;
+  }
+  nav ul li{
+    display: inline-block;
+    line-height: 80px;
+    margin: 0 5px;
+  }
+  nav ul li a{
+    color: white;
+    font-size: 17px;
+    padding: 7px 13px;
+    border-radius: 3px;
+    text-transform: uppercase;
+  }
+  a.active,a:hover{
+    background: #1b9bff;
+    transition: .5s;
+  }
+  .checkbtn{
+    font-size: 30px;
+    color: white;
+    float: right;
+    line-height: 80px;
+    margin-right: 40px;
+    cursor: pointer;
+    display: none;
+  }
+  #check{
+    display: none;
+  }
+  @media (max-width: 952px){
+    label.logo{
+      font-size: 30px;
+      padding-left: 50px;
+    }
+    nav ul li a{
+      font-size: 16px;
+    }
+  }
+  @media (max-width: 858px){
+    .checkbtn{
+      display: block;
+    }
+    ul{
+      position: fixed;
+      width: 100%;
+      height: 100vh;
+      background: #2c3e50;
+      top: 80px;
+      left: -100%;
+      text-align: center;
+      transition: all .5s;
+    }
+    nav ul li{
+      display: block;
+      margin: 50px 0;
+      line-height: 30px;
+    }
+    nav ul li a{
+      font-size: 20px;
+    }
+    a:hover,a.active{
+      background: none;
+      color: #0082e6;
+    }
+    #check:checked ~ ul{
+      left: 0;
+    }
+  } */
