--- a/CSS/galleryStyle.css
+++ b/CSS/galleryStyle.css
@@ -23,27 +23,83 @@ a {
     margin-bottom: 20px;
   } */
 
+  h2 {
+    font-size: 2.5rem;
+    border-bottom: 5px solid orange;
+    width: 20%;
+    margin-bottom: 30px;
+  }
+  
+  .event-title {
+    font-size: 24px;
+    margin-bottom: 10px;
+    color: #293241;
+  }
+  
+  .additional {
+    font-style: italic;
+    font-size: 18px;
+  }
+  
+  .event-list {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+    padding: 20px;
+    border-bottom: 1px solid #ccc;
+  }
+  
+  .event-list li {
+    font-size: 20px;
+    cursor: pointer;
+    transition: color 0.3s;
+    color:#c79058;
+  }
+  
+  .event-list li:hover {
+    color: #ee6c48;
+  }
+  
   main {
     max-width: 1200px;
     margin: 0 auto;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
+    padding: 20px;
   }
-
+  
   .box {
-    width: 30%;
+    width: calc(33.33% - 20px);
     margin-bottom: 20px;
     box-sizing: border-box;
     padding: 10px;
+    background-color: #fff;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+    border-radius: 5px;
+    transition: transform 0.3s;
+    overflow: hidden;
   }
-
+  
   img {
     width: 100%;
+    height: auto;
     border-radius: 4px;
-    transition: transform 0.3s;
   }
-
-  img:hover {
-    transform: scale(1.1);
+  
+  .box:hover {
+    transform: scale(1.05);
+    color:yellow;
   }
+  @media(max-width: 900px) {
+        body {
+          font-size: 16px;
+        } 
+        .box{
+          flex-direction:column;
+          width:100%;
+        }
+      }
+        
