--- a/CSS/teachStyle.css
+++ b/CSS/teachStyle.css
@@ -18,28 +18,98 @@ a {
     text-decoration: none;
 }
 
+.content {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    padding: 20px;
+}
+
+.right-section {
+    flex: 1;
+    padding: 20px;
+    background-color: #f9f9f9;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    box-sizing: border-box;
+    transition: transform 0.3s, background-color 0.3s, color 0.3s, box-shadow 0.3s;
+    overflow: hidden;
+}
+
+.right-section:hover {
+    transform: scale(1.05);
+    background-color: #e0e0e0;
+    color: #333;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
+
+.right-section p {
+    font-size: 18px;
+    line-height: 1.6;
+}
+
+.left-section img {
+    max-width: 100%;
+    height: auto;
+    background-color: white;
+}
+
+main {
+    max-width: 1200px;
+    margin: 0 auto;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    padding: 20px;
+}
+
 .container {
     max-width: 800px;
     margin: 0 auto;
     padding: 20px;
+    gap: 10px;
 }
-.teacher {
+
+.teacher-info, .review {
+    flex: 1;
+    padding: 20px;
+    border: 1px solid #ccc;
     margin-bottom: 20px;
+    background-color: #f9f9f9;
+    box-sizing: border-box;
+    padding: 10px;
+    border-radius: 5px;
+    transition: transform 0.3s;
+    overflow: hidden;
+}
+
+.teacher-info:hover, .review:hover {
+    transform: scale(1.05);
+    color: red;
+}
+
+.teachers-list, .reviews {
     display: flex;
-    align-items: center;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    margin: 10px;
+    gap: 1rem;
 }
-.teacher img {
-    max-width: 100px;
-    margin-right: 20px;
+
+h2 {
+    text-align: center;
 }
-.testimonial {
-    margin-bottom: 30px;
-}
+
+/* For screens smaller than 768px width */
 @media (max-width: 768px) {
-    header img {
-        display: none;
+    .teacher-info, .review {
+        flex: 1;
+        padding: 10px;
+        margin-bottom: 10px;
     }
-    .teacher img {
-        max-width: 60px;
+
+    .teachers-list, .reviews {
+        flex-direction: column;
     }
 }
