--- a/CSS/homestyle.css
+++ b/CSS/homestyle.css
@@ -8,6 +8,7 @@
 
 body {
     font-family: 'Poppins' sans-serif;
+    overflow-x: hidden;
 }
 
 li {
@@ -43,7 +44,7 @@ img {
     width: auto;
     padding: 16px;
     margin-top: -22px;
-    color: white;
+    color: orange;
     font-weight: bold;
     font-size: 18px;
     transition: 0.6s ease;
