--- a/CSS/headStyle.css
+++ b/CSS/headStyle.css
@@ -1,3 +1,23 @@
+/* width */
+::-webkit-scrollbar {
+  width: 15px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #f1f1f1; 
+}
+ 
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #888; 
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555; 
+}
+
 .school {
   padding: 0 2rem;
   display: flex;
@@ -78,7 +98,7 @@
     display: none;
     flex-direction: column;
     background-color: #3c3fa8;
-    position: absolute;
+    /* position: absolute; */
     top: 100px;
     right: 0;
   }
